Adding more unit tests and fixing existing ones
LMCROSSITXSADEPLOY-3563